--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,5 +1,20 @@
 ja:
   activerecord:
+    models:
+      blog: "ブログ"
+      user: "ユーザー"
+    attributes:
+      blog:
+        title: "タイトル"
+        content: "内容"
+      user:
+        title: "タイトル"
+        name: "名前"
+        email: "メールアドレス"
+        current_password: "現在のパスワード"
+        password: "パスワード"
+        password_confirmation: "確認用パスワード"
+        remember_me: "ログインを記憶"
     errors:
       messages:
         record_invalid: "バリデーションに失敗しました: %{errors}"
